Solucionando el borrado de recetas